--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "13.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.7.0"
+    "react-router-dom": "^6.7.0",
+    "react-twitter-embed": "^4.0.4"
   }
 }
