--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@next/font": "13.1.4",
+    "dotenv": "^16.0.3",
+    "emailjs-com": "^3.2.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
+    "express": "^4.18.2",
     "next": "13.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
