--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "next": "13.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "react-twitter-embed": "^4.0.4",
+    "redux": "^4.2.1",
     "swr": "^2.1.0"
   }
 }
