--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "react-twitter-embed": "^4.0.4",
+    "react-twitter-widgets": "^1.11.0",
     "redux": "^4.2.1",
     "swr": "^2.1.0"
   }
