--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "express": "^4.18.2",
+    "microcms-js-sdk": "^3.0.0",
     "next": "13.1.4",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
